adapt parameters with LinearOptimizerParameters